# flyte-nlp

./: Dockerfile  Makefile  README.md  pyproject.toml
flyte_nlp/workflows/: word2vec_and_lda.py
