[tool.poetry]
name = "flyte-nlp"
version = "0.1.0"
description = "NLP Processing Example with Flyte"
authors = ["erikdao <erik.dao@silo.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flyte_nlp"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flytekit = "^1.7.0"
gensim = "^4.3.1"
nltk = "^3.8.1"
dataclasses-json = "^0.5.8"
seaborn = "^0.12.2"
flytekitplugins-deck-standard = "^1.7.0"
loguru = "^0.7.0"
scikit-learn = "^1.2.2"
pot = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
